<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="#eeeeee"
    android:padding="4dp"
    
    >

    <LinearLayout android:layout_height="wrap_content" 
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="#ffffff"
        android:layout_margin="3dp"
            android:padding="4dp"
        >
        
        <TextView
        android:id="@+id/crr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crry"
        android:layout_marginLeft="4dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />
        
    <Spinner
        android:id="@+id/moneysign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:spinnerMode="dialog"  />

    </LinearLayout>
    
       <LinearLayout android:layout_height="wrap_content" 
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="#ffffff"
        android:layout_margin="3dp"
            android:padding="4dp"
        >
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ease"
        android:layout_marginLeft="4dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/radio0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/left" />

            <RadioButton
                android:id="@+id/radio1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/right" />

        
        </RadioGroup>
</LinearLayout>

       
       
          <LinearLayout android:layout_height="wrap_content" 
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="#ffffff"
        android:layout_margin="3dp"
            android:padding="4dp"
        >
    
    <TextView
      
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expenselimit"
        android:layout_marginLeft="4dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    
          <LinearLayout android:layout_height="wrap_content" 
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:background="#ffffff"

        >
    
    <EditText
        android:id="@+id/expensselimit"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:ems="10"

        android:hint="@string/setlimit"
        android:inputType="numberDecimal" >

    </EditText>

    <Button
        android:id="@+id/saveandedit"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/edit" 
        android:background="@drawable/button"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:textColor="#ffffff"
        
        />
  
    </LinearLayout>
</LinearLayout>

</LinearLayout>