<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical" >

    <TextView
        android:id="@+id/starttext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chooseone"
        android:visibility="gone"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/whythis"
        android:visibility="gone"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/startscreen" />
    <LinearLayout 
        android:layout_width="match_parent"
        android:weightSum="2"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        
    <Button
        android:id="@+id/lefty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textColor="#ffffff"
        android:layout_margin="4dip"
        android:background="@drawable/button"
        android:text="@string/left" />

    <Button
        android:id="@+id/righty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="4dip"
        android:textColor="#ffffff"
        android:background="@drawable/button"
        android:text="@string/right" />

    </LinearLayout>

    

</LinearLayout>
