<RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
          xmlns:ads="http://schemas.android.com/apk/res-auto"
          
>

    <!--  xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads" -->
    
    
        <!-- <ImageView
        android:id="@+id/imageView1"
                android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/action_bar" 
      />
         -->
        
            <com.google.android.gms.ads.AdView
        android:id="@+id/ad_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/banner_ad_unit_id" />
        
        
        
        
        
        
            <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
     	android:layout_alignParentBottom="true"
      	android:id="@+id/fl"
      >
    
        
        <!-- <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/action_bar" />
         -->
     <View android:layout_width="match_parent"
     android:layout_height="50dp"
     android:background="#ff3434"/>

     
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ff3434"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"

            android:orientation="horizontal" >

            
             <Button
                android:id="@+id/settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/settings"
                android:text="@string/settings"
                 android:layout_weight="1"
                android:background="#00ffffff"
                android:textColor="#ffffff" />
             
             
                        <Button
                android:id="@+id/graph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/chart"
                android:layout_weight="1"
                android:text="@string/graph"
                android:background="#00ffffff"
                android:textColor="#ffffff" />

           
                        <Button
                android:id="@+id/viewdetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00ffffff"
                android:layout_weight="1"
                android:drawableTop="@drawable/details"
                android:text="@string/viewdetails"
                android:textColor="#ffffff" />

                        

        </LinearLayout>
        
        
        
    </FrameLayout>
    
            
        
        
        
    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_above="@id/fl"
        android:layout_below="@id/ad_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

       >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dip"
                        android:focusableInTouchMode="true"
            android:focusable="true"
            android:orientation="vertical" >
                          
            <TextView
                    android:id="@+id/datetextview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="25/12/2015"
                   android:paddingLeft="10dip"
                    android:paddingRight="10dip"
                     android:background="@drawable/button"
                    android:textColor="#ffffff"
                    android:layout_gravity="center"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
                            

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/editText1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/whopay" >

                </EditText>

                <CheckBox
                    android:id="@+id/checkBox1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/me" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/editText2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/whompay" >
                </EditText>
                
                 <CheckBox
                    android:id="@+id/checkBox2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/me" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/currencyshow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textAppearance="?android:attr/textAppearanceMedium" />
                <EditText
                    android:id="@+id/editText3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:hint="@string/amount" >
                </EditText>

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >

          
                <EditText
                    android:id="@+id/editText4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/extranote"
                    android:lines="4" >
                </EditText>

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>
            
            <Button
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:textColor="#ffffff"
                 android:paddingLeft="10dip"
                    android:paddingRight="10dip"
                   
                android:background="@drawable/button"
                android:drawableRight="@drawable/save"
                android:text="Save" />

        </LinearLayout>
    </ScrollView>



</RelativeLayout>