<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/pdf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#ffffff"
            android:visibility="gone"
            android:drawableTop="@drawable/pdf"
            android:text="@string/pdf" />

        <Button
            android:id="@+id/csv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#ff3434"
            android:textColor="#ffffff"
            android:drawableTop="@drawable/csv"
            android:text="@string/csv" />

        <Button
            android:id="@+id/detailreport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
             android:visibility="gone"
            android:background="#ffffff"
            android:drawableTop="@drawable/csv"
            android:text="@string/report" />
    
    </LinearLayout>
    
    
        <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:orientation="vertical" >
        
        <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filteron" />

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
            <Spinner
                android:id="@+id/days"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
            

            <Spinner
                android:id="@+id/months"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
  
            
                      <Spinner
                android:id="@+id/year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
  
                      
   </LinearLayout>
                      </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_below="@id/linearLayout2"
        android:layout_height="match_parent"
        android:layout_above="@id/linearLayout1"
       
         >

        
                  <HorizontalScrollView
                        android:id="@+id/horizontalScrollView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                     
            <TableLayout
                 android:id="@+id/table"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                           
                                                                                                                                                   
                                       
              </TableLayout>
                     
                    </HorizontalScrollView>
            </ScrollView>

    

</RelativeLayout>